# Bot7685

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  bot.py  docker-compose.yml  prek.toml  pyproject.toml  requirements.txt  ruff.toml  ty.toml
.github/actions/setup-python/: action.yml
.github/workflows/: basedpyright.yml  docker-bot7685-base.yml  docker-bot7685.yml  docker-chronocat-base.yml  docker-chronocat.yml  docker-lgr.yml  docker-milky.yml  docker-playwright.yml  docker-uv-cache.yml  docker-yogurt.yml  docker-yunzai-base.yml  docker-yunzai.yml  dockerhub-release.yml  lint.yml  pyright.yml  ty.yml  update-bot7685.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.cli  Dockerfile.lgr  Dockerfile.milky  Dockerfile.playwright  Dockerfile.uv-cache  Dockerfile.yogurt  gunicorn_conf.py  start.sh
docker/assets/: entrypoint.sh
docker/bot7685/: Dockerfile  Dockerfile.base  Dockerfile.dev
docker/bot7685/assets/: patch_satori.py  start.sh
docker/chronocat/: Dockerfile  Dockerfile.base
docker/yunzai/: Dockerfile  Dockerfile.base  start.sh
docker/yunzai/base/: Dockerfile
scripts/: generate_env.py  orm_upgrade.py  resolve_plugin_requires.py
src/: bootstrap.py  config.py  highlight.py  lib.rs  logo.py  orm.py  pw.py  utils.py
src/bootstrap/: __init__.py  config.py  initialize.py  logo.py  params.py  patch_htmlrender.py  patch_lifespan.py  plugin_loader_hook.py  plugin_requires.json
src/bootstrap/log/: __init__.py  ansi_to_tag.py  config.py  logging.py
src/bootstrap/patches/: __init__.py  lifespan.py  plugin_requires.json  pmn.py  require.py
src/custom_memes/goldenglow_holdsign/: __init__.py
src/disposable/: __init__.py  bot.py  common.py  driver.py  event.py  matcher.py  plugin.py  utils.py
src/plugins/: _fix_v11_image.py  about.py  broken_pic.py  bv_convert.py  cache.py  friend_add.py  gtg.py  hook_memes.py  meow.py  neuro_schedule.py  no_shit.py  on_driver_startup.py  padoru.py  patch_v11_event.py  qqbot_card.py  random_neuro.py  reaction.py  read_60s.py  tgsetu.py
src/plugins/_skland_sign/: const.py  sign.py
src/plugins/annual_report/: __init__.py  analyzer.py  config.py  db_converter.py  image_generator.py  matcher.py  schema.py  utils.py
src/plugins/annual_report/templates/: report_template.html.jinja2
src/plugins/artifact_fetch/: __init__.py  artifact_helper.py  config.py  data_source.py  depends.py  matcher.py  upload.py
src/plugins/artifact_fetch/matchers/: __init__.py  artifact.py  gh_workflow.py
src/plugins/artifact_fetch/upload/: __init__.py  base.py
src/plugins/cache/: __init__.py  __init__.pyi  cache.py  cache.pyi  gh_cache.py
src/plugins/chatgpt/: __init__.py  alc.py  apikey.py  config.py  depends.py  exceptions.py  loadpresets.py  preset.py  session.py  sessions.py
src/plugins/chatgpt_old/: __init__.py  alc.py  apikey.py  config.py  depends.py  exceptions.py  preset.py  session.py
src/plugins/disposer/: __init__.py  apscheduler.py  bot7685.py
src/plugins/exe_code/: __init__.py  code_context.py  config.py  const.py  constant.py  depends.py  help_doc.py  interface.py  user_const_var.py  utils.py
src/plugins/exe_code/interface/: __init__.py  api.py  group.py  help_doc.py  interface.py  user.py  user_const_var.py  utils.py
src/plugins/friend_add/: __init__.py  milky.py  ob11.py
src/plugins/group_daily_analysis/: LICENSE  __init__.py  config.py
src/plugins/group_daily_analysis/analyzers/: base.py  chat_quality.py  golden_quote.py  topic.py  (+1 more)
src/plugins/group_pipe/: __init__.py  adapter.py  database.py  hooks.py  utils.py
src/plugins/hooks/: __init__.py  avoid_install_browser.py  clean_pycache.py  clean_shortcut.py  debug_pyd_error.py  fix_ntqq_media.py  gh_cache.py  hook_memes.py  ignore_tg_forum_topic_create.py  matcher_reaction.py  meow.py  milky_md_seg.py  patch_adapter_request.py  patch_http_client_mixin.py  patch_http_client_request.py  patch_wordcloud.py  reaction_before_matcher.py  tmp_fix_ntqq_media.py
src/plugins/jm/: __init__.py  common.py  config.py  jm.py  jm_option.py  option.py  pixiv.py  utils.py
src/plugins/jmcomic/: __init__.py  jm_option.py  utils.py
src/plugins/kuro/: __init__.py  config.py  handler.py  signin.py
src/plugins/lots/: __init__.py  depends.py  lots_data.py
src/plugins/monitor/: __init__.py  config.py  detect.py  hooks.py
src/plugins/neuro_schedule/: __init__.py  models.py  parser.py  render.py
src/plugins/patch_event/: __init__.py  config.py  highlight.py  onebot11.py  patcher.py  qq.py  satori.py  utils.py  v11.py
src/plugins/ping_pong/: __init__.py
src/plugins/plugin_manager/: __init__.py  commands.py  config.py  guard.py  models.py  registry.py  session.py
src/plugins/random_shu/: __init__.py  constant.py  data.json  data.py  event.py  router.py  text.json
src/plugins/reaction/: .gitignore  __init__.py  bubble_check.cp313-win_amd64.pyd  bubble_check.pyi
src/plugins/russian_roulette/: __init__.py  depends.py  game.py
src/plugins/screen_detector/: __init__.py  api.py  command.py  config.py  detect.py  reaction.py  scheduler.py
src/plugins/skland_sign/: __init__.py  api.py  const.py  database.py  model.py  sign.py
src/plugins/sub_helper/: __init__.py  config.py  ssh.py  sub.py
src/plugins/talk_stats/: __init__.py  config.py  matcher.py  query.py  render.py  scheduler.py
src/plugins/todo_list/: __init__.py  render.py  todo_list.py
src/plugins/trusted/: __init__.py  matcher.py  trust_data.py
src/plugins/upload_cos/: __init__.py  config.py  cos_ops.py  database.py  depends.py  exports.py  exports.pyi  matchers.py
src/plugins/wplace_paint/: __init__.py  avartar.py  config.py  consts.py  fetch.py  matcher.py  paint.py  pawtect.py  preview.py  rank.py  scheduler.py  schemas.py  template.py  utils.py
src/service/: task.py
src/service/cache/: __init__.py  __init__.pyi  abstract.py  cache.py  config.py  impl.py
src/service/kv/: __init__.py  config.py  database.py  kv_store.py  model.py  utils.py
src/service/llm/: __init__.py  client.py  config.py  exceptions.py  resilience.py  schema.py
(+263 files in other folders)
