[project]
name = "Bot7685"
version = "0.1.0"
description = "Bot7685 by wyf7685"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
  # nonebot2
  "nonebot2[fastapi,httpx,websockets]>=2.4.4",
  # adapters
  "nonebot-adapter-discord>=1.1.3",
  "nonebot-adapter-feishu>=2.7.1",
  "nonebot-adapter-github>=0.6.0",
  "nonebot-adapter-milky>=1.1.0",
  "nonebot-adapter-onebot>=2.4.6",
  "nonebot-adapter-qq>=1.6.6",
  "nonebot-adapter-satori>=1.3.0",
  "nonebot-adapter-telegram>=0.1.0b20",
  # plugins
  "nonebot-plugin-alconna>=0.61.1",
  "nonebot-plugin-apscheduler>=0.5.0",
  "nonebot-plugin-htmlrender==0.6.7",
  "nonebot-plugin-kawaii-status>=0.2.0",
  "nonebot-plugin-localstore>=0.7.4",
  "nonebot-plugin-orm[asyncpg]>=0.8.3",
  "nonebot-plugin-skland>=0.6.8",
  "nonebot-plugin-uninfo>=0.9.0",
  "nonebot-plugin-user>=0.5.3",
  "nonebot-plugin-waiter>=0.8.1",
  "nonebot-plugin-wakatime>=0.3.0",
  "nonebot-plugin-wordcloud>=0.9.0",
  # plugin deps
  "aiocache[redis]>=0.12.3",
  "anyio>=4.12.1",
  "cloudscraper>=1.2.71",
  "cos-python-sdk-v5>=1.9.41",
  "githubkit[auth-app]>=0.14.7",
  "gunicorn>=25.1.0",
  "httpx>=0.28.1",
  "humanize>=4.15.0,<5.0",
  "imageio[ffmpeg]>=2.37.3",
  "jmcomic>=2.6.15",
  "mcstatus>=12.2.1,<13.0.0",
  "msgspec[toml,yaml]>=0.20.0",
  "pillow>=10.0.0",
  "playwright==1.58.0",
  "pydantic>=2.12.5",
  # plugins
  "nonebot-plugin-exe-code",
  "nonebot-plugin-talk-stats",
  "nonebot-plugin-werewolf",
  # forked plugins
  "nonebot-plugin-chatrecorder",
  "nonebot-plugin-zssm",
  # Bot7685 Extensions
  "bot7685-ext[htmlrender,nonebot]==0.4.1",
]

[dependency-groups]
dev = [
  "ruff>=0.15.5",
  "basedpyright>=1.38.2",
  "nonebot-plugin-orm[aiosqlite]>=0.8.3",
  "prek>=0.3.6",
]

[tool.uv.sources]
nonebot-plugin-exe-code = { git = "https://github.com/wyf7685/nonebot-plugin-exe-code.git" }
nonebot-plugin-talk-stats = { git = "https://github.com/wyf7685/nonebot-plugin-talk-stats.git" }
nonebot-plugin-werewolf = { git = "https://github.com/wyf7685/nonebot-plugin-werewolf.git" }
nonebot-plugin-zssm = { git = "https://github.com/wyf7685/nonebot-plugin-zssm.git" }
nonebot-plugin-chatrecorder = { git = "https://github.com/wyf7685/nonebot-plugin-chatrecorder.git" }

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "standard"
ignore = [
  ".venv",
  "data",       # nbp-orm migration scripts
  "**/build",
  "**/scripts",
  "external/nonebot-plugin-chatrecorder"  # too many adapters
]
disableBytesTypePromotions = true
