[project]
name = "Bot7685"
version = "0.1.0"
description = "Bot7685 by wyf7685"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
  # nonebot2
  "nonebot2[fastapi,httpx,websockets]>=2.5.0",
  # adapters
  "nonebot-adapter-discord>=1.1.7",
  "nonebot-adapter-github>=0.6.0",
  "nonebot-adapter-milky>=1.2.0",
  "nonebot-adapter-telegram>=0.1.0b20",
  # plugins
  "nonebot-plugin-alconna>=0.62.0",
  "nonebot-plugin-apscheduler>=0.5.0",
  "nonebot-plugin-htmlrender==0.6.7",
  "nonebot-plugin-kawaii-status>=0.2.0",
  "nonebot-plugin-localstore>=0.7.4",
  "nonebot-plugin-orm[asyncpg,aiosqlite]>=0.8.3",
  "nonebot-plugin-rollpig>=0.2.9",
  "nonebot-plugin-skland>=0.6.9",
  "nonebot-plugin-uninfo>=0.9.0",
  "nonebot-plugin-user>=0.5.3",
  "nonebot-plugin-waiter>=0.8.1",
  "nonebot-plugin-wakatime>=0.3.1",
  "nonebot-plugin-wordcloud>=0.10.0",
  # plugin deps
  "anyio>=4.12.1",
  "cloudscraper>=1.2.71",
  "githubkit[auth-app]>=0.14.7",
  "gunicorn>=25.1.0",
  "httpx>=0.28.1",
  "humanize>=4.15.0,<5.0",
  "imageio[ffmpeg]>=2.37.3",
  "jmcomic>=2.6.20",
  "mcstatus>=12.2.1,<13.0.0",
  "msgspec[toml,yaml]>=0.20.0",
  "pillow>=10.0.0",
  "playwright==1.58.0",
  "pydantic>=2.12.5",
  "rapidfuzz>=3.14.5",
  "redis>=4.2.0",
  # plugins
  "nonebot-plugin-exe-code",
  "nonebot-plugin-talk-stats",
  "nonebot-plugin-werewolf",
  # forked plugins
  "nonebot-plugin-chatrecorder",
  "nonebot-plugin-zssm",
  # Bot7685 Extensions
  "bot7685-ext[htmlrender,nonebot]==0.5.1",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "dev-runtime" },
]
lint = ["ruff>=0.15.14", "basedpyright>=1.39.5", "prek>=0.4.1", "ty>=0.0.44"]
dev-runtime = [
  "nonebot-adapter-feishu>=2.7.1",
  "nonebot-adapter-onebot>=2.4.6",
  "nonebot-adapter-qq>=1.6.6",
  "nonebot-adapter-satori>=1.3.0",
  "nonebot-plugin-orm[aiosqlite]>=0.8.3",
]

[tool.uv.sources]
nonebot-plugin-exe-code = { git = "https://github.com/wyf7685/nonebot-plugin-exe-code.git" }
nonebot-plugin-talk-stats = { git = "https://github.com/wyf7685/nonebot-plugin-talk-stats.git" }
nonebot-plugin-werewolf = { git = "https://github.com/wyf7685/nonebot-plugin-werewolf.git" }
nonebot-plugin-zssm = { git = "https://github.com/wyf7685/nonebot-plugin-zssm.git" }
nonebot-plugin-chatrecorder = { git = "https://github.com/wyf7685/nonebot-plugin-chatrecorder.git" }
nonebot-plugin-rollpig = { git = "https://github.com/Bearlele/nonebot-plugin-rollpig.git", rev = "9f7580854e3f12e76d425088f6f78c8bd3800d39" }

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "standard"
ignore = [
  ".venv",
  "data",       # nbp-orm migration scripts
  "**/scripts",
]
disableBytesTypePromotions = true
